New style, Gamejam content

--- a/_gamejams/2017-04-01-Orbis.md
+++ b/_gamejams/2017-04-01-Orbis.md
@@ -11,8 +11,8 @@ project-type: {{project-type}}
 event: Ludum Dare 38
 theme: A Small World
 tools: [Unity]
-my-contribution: [code, gamedesign, shader]
-team: [Alex Massé, Kevin McNally-Gagnon, Richard Rail, Sylvain Savard]
+my-contribution: [Code, GameDesign, Shader]
+team: 
 visibily: main
 ---
 
