--- a/_gamejams/2018-01-01-WayHome.md
+++ b/_gamejams/2018-01-01-WayHome.md
@@ -11,8 +11,8 @@ project-type: {{project-type}}
 event: Global game Jam 2018 (mtl game jam)
 theme: Transmission
 tools: [Unity]
-my-contribution: [code, gamedesign, shader]
-team: [Élodie Marcillac, Kevin McNally-Gagnon, Richard Rail, Travis Henry Martin]
+my-contribution: [Code, GameDesign, Shader]
+team: 
 visibily: archive
 ---
 
