--- a/_gamejams/2018-05-01-bioMech.md
+++ b/_gamejams/2018-05-01-bioMech.md
@@ -11,8 +11,8 @@ project-type: {{project-type}}
 event: Concordia Make Games 2018
 theme: Unlikely Friends
 tools: [Unity]
-my-contribution: [code, gamedesign, shader]
-team: [Alex Massé, Élodie Marcillac, Kevin McNally-Gagnon, Lhoir Samantha, Richard Rail, Travis Henry Martin]
+my-contribution: [Code, GameDesign, Shader]
+team: 
 visibily: archive
 ---
 
