--- a/_gamejams/2021-08-14-poutine64.md
+++ b/_gamejams/2021-08-14-poutine64.md
@@ -11,8 +11,8 @@ project-type: {{project-type}}
 event: LOWREZJAM 2021
 theme: 64x64 pixels or less
 tools: [Godot, PyxelEdit]
-my-contribution: [art, code, gamedesign, ui]
-team: [Richard Rail]
+my-contribution: [Art, Code, Gamedesign, UI]
+team: 
 visibily: main
 ---
 
