--- a/_projects/2021-08-07-Duckys.md
+++ b/_projects/2021-08-07-Duckys.md
@@ -1,15 +1,31 @@
 ---
 layout: project-post
 title: Ducky's Day Dream
-shortdescription: Description
 thumbnail-img: DuckysDayDream-thumbnail.png
-tags: {{tags}}
+tags: [test]
+comments: true
 date: 2021-08-07
-tools: [C#, Paint.net]
 ---
 
-Words
+Ducky’s Day Dreams is a relaxing city builder where you explore different building styles while following funny and whimsical stories. Strategically place your pieces on the board to build up your points, unilock unique pieces, and create a beautiful piece of art. Beauty is in the eye of the beholder, and you’re here to have a great time.
 
-***
+## Developpement
+Ducky's is my first full solo game that I worked on for more than a month. This game was made from December 2020 to August 2021. It was mostly an exercise of consistency, habit and discipline. I got tired of the game but kept going for the sake of having something to show for. I now have proof that I can work on a project for a long time. This project is a sort of jump of point for my next project.
 
-Words
+This project was divided in 3 phases:
+1. Prototype: This part was made in a 72 hour game jam. The idea was fun enough to justify more developpement.
+2. Production: A 5 months divided into sprints of 2-3 weeks each. Each sprint has a playable version at the end.
+3. Polish: With all the features locked, I took 2 months to fix all the bugs and polish the corners.
+
+### Prototype Version
+The first look of the game from the game jam. 
+
+### Production Version
+Progress of developpement of the game
+
+- ![Tile placement](/projects/img/TilePlacement1.gif){: .mx-auto.d-block :}
+- ![4 month later tile placement polish](/projects/img/TilePlacement2.gif){: .mx-auto.d-block :}
+
+## End product
+
+
