Awards, tools and gamejam formating

--- a/_gamejams/2018-01-01-WayHome.md
+++ b/_gamejams/2018-01-01-WayHome.md
@@ -7,22 +7,19 @@ thumbnail-img: assets/img/gamejams/WayHome-Thumbnail.png
 tags: {{tags}}
 date: 2018-01-01
 duration: 48 hours
-project-type: {{project-type}}
 event: Global game Jam 2018 (mtl game jam)
 theme: Transmission
-tools: [Unity]
-my-contribution: [Code, GameDesign, Shader]
+tools: ["Unity"]
+myContribution: 
 team: 
 visibily: archive
+awards: 
 ---
-
 A 2 player game where one player has a document with various information on witch species needs what. The player with the information is not allowed to see the screen. You must communicate well.
 
 As most jams, I codded the enemies behavior and spawing. Then I went straight to adding shaders everywhere. With a real artist, it was an exercice of communication of my shading idea and her artistic direction. It gave me the idea to create a list detailed of all the shaders I made. This resource is used to communicate ideas and exemples of what shaders can do and I could do with ease.
 
-***
 ## Medias
-
 <div class="row">
 {% include image-card.html FullImagePath='assets/img/gamejams/WayHome-2.png' ThumbnailPath='assets/img/gamejams/WayHome-2.png' Alt="First level." Caption="First level."%}
 {% include image-card.html FullImagePath='assets/img/gamejams/WayHome-1.png' ThumbnailPath='assets/img/gamejams/WayHome-1.png' Alt="Only une orb of life remaining." Caption="Only une orb of life remaining."%}
