--- a/_gamejams/2017-04-01-Orbis.md
+++ b/_gamejams/2017-04-01-Orbis.md
@@ -7,22 +7,19 @@ thumbnail-img: assets/img/gamejams/OrbisThumbnail.jpg
 tags: {{tags}}
 date: 2017-04-01
 duration: 48 hours
-project-type: {{project-type}}
 event: Ludum Dare 38
 theme: A Small World
-tools: [Unity]
-my-contribution: [Code, GameDesign, Shader]
+tools: ["Unity"]
+myContribution: 
 team: 
 visibily: main
+awards: 
 ---
-
 A game where you must do the right action at the right time to discover new powers. At the end of times, you start over with all your powers. Try to bring life to this rock!
 
 Again a jam where I played with shaders. When the planet gets past a certain heat threshold, a heat distortion shader start to effect. A shader was also used to show/hide decal of lava or vegetation.
 
-***
 ## Medias
-
 <div class="row">
 {% include image-card.html FullImagePath='assets/img/gamejams/Orbis-1.jpg' ThumbnailPath='assets/img/gamejams/Orbis-1.jpg' Alt="Title screen that plays the game by itself." Caption="Title screen that plays the game by itself."%}
 {% include image-card.html FullImagePath='assets/img/gamejams/Orbis-2.jpg' ThumbnailPath='assets/img/gamejams/Orbis-2.jpg' Alt="The effect of a volcano." Caption="The effect of a volcano."%}
