--- a/_gamejams/2018-05-01-bioMech.md
+++ b/_gamejams/2018-05-01-bioMech.md
@@ -7,22 +7,19 @@ thumbnail-img: assets/img/gamejams/bioMech-1.png
 tags: {{tags}}
 date: 2018-05-01
 duration: 48 hours
-project-type: {{project-type}}
 event: Concordia Make Games 2018
 theme: Unlikely Friends
-tools: [Unity]
-my-contribution: [Code, GameDesign, Shader]
+tools: ["Unity"]
+myContribution: 
 team: 
 visibily: archive
+awards: ["Jury's Choice"]
 ---
-
 Survive waves of enemis with your friends. You control flying entities that have different weapons. Don't let enemies get to the heart.
 
 This was a fun jam because I went a little further with all the effects(screen shake, flash, transition). Also, most of the shaders was a new version of old ones, getting my skill a little bit higher each time.
 
-***
 ## Medias
-
 <div class="row">
 {% include image-card.html FullImagePath='assets/img/gamejams/bioMech-1.png' ThumbnailPath='assets/img/gamejams/bioMech-1.png' Alt="Title Screen." Caption="Title Screen."%}
 {% include image-card.html FullImagePath='assets/img/gamejams/bioMech-2.png' ThumbnailPath='assets/img/gamejams/bioMech-2.png' Alt="The player (in the blue bubble) is still alive!" Caption="The player (in the blue bubble) is still alive!"%}
