--- a/_gamejams/2021-08-01-Gmtk2021.md
+++ b/_gamejams/2021-08-01-Gmtk2021.md
@@ -7,22 +7,19 @@ thumbnail-img: assets/img/gamejams/RedThreadOfFate-1.png
 tags: {{tags}}
 date: 2021-08-01
 duration: 8 months
-project-type: {{project-type}}
 event: GTMK 2021
 theme: Joined together
-tools: [Unity, PyxelEdit]
-my-contribution: [Art, Code, GameDesign, Writing, UI]
+tools: ["Unity", "PyxelEdit"]
+myContribution: 
 team: 
 visibily: archives
+awards: 
 ---
-
 A kid, helped by a spirit, tries to leave the cave he got into by doing some plateformer puzzles.
 
 The team had 2 artists that never used unity, so I was there to make their art fit into unity, add the colliders and all the other grunt work.
 
-***
 ## Medias
-
 <div class="row">
 {% include image-card.html FullImagePath='assets/img/gamejams/RedThreadOfFate-1.png' ThumbnailPath='assets/img/gamejams/RedThreadOfFate-1.png' Alt="" Caption=""%}
 </div>
