Moved image to yaml

--- a/_gamejams/2017-04-01-Orbis.md
+++ b/_gamejams/2017-04-01-Orbis.md
@@ -14,15 +14,13 @@ myContribution:
 team: 
 visibily: main
 awards: 
+medias: 
+    - {url: Orbis-1.jpg, thumbnail: Orbis-1.jpg, caption: "Title screen that plays the game by itself."}
+    - {url: Orbis-2.jpg, thumbnail: Orbis-2.jpg, caption: "The effect of a volcano."}
+    - {url: Orbis-3.jpg, thumbnail: Orbis-3.jpg, caption: "The ice asteroid is there to bring water!"}
+    - {url: Orbis-4.gif, thumbnail: Orbis-4.gif, caption: "Heat shader in action."}
+
 ---
 A game where you must do the right action at the right time to discover new powers. At the end of times, you start over with all your powers. Try to bring life to this rock!
 
 Again a jam where I played with shaders. When the planet gets past a certain heat threshold, a heat distortion shader start to effect. A shader was also used to show/hide decal of lava or vegetation.
-
-## Medias
-<div class="row">
-{% include image-card.html FullImagePath='assets/img/gamejams/Orbis-1.jpg' ThumbnailPath='assets/img/gamejams/Orbis-1.jpg' Alt="Title screen that plays the game by itself." Caption="Title screen that plays the game by itself."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/Orbis-2.jpg' ThumbnailPath='assets/img/gamejams/Orbis-2.jpg' Alt="The effect of a volcano." Caption="The effect of a volcano."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/Orbis-3.jpg' ThumbnailPath='assets/img/gamejams/Orbis-3.jpg' Alt="The ice asteroid is there to bring water!" Caption="The ice asteroid is there to bring water!"%}
-{% include image-card.html FullImagePath='assets/img/gamejams/Orbis-4.gif' ThumbnailPath='assets/img/gamejams/Orbis-4.gif' Alt="Heat shader in action." Caption="Heat shader in action."%}
-</div>
