--- a/_gamejams/2018-01-01-WayHome.md
+++ b/_gamejams/2018-01-01-WayHome.md
@@ -14,16 +14,14 @@ myContribution:
 team: 
 visibily: archive
 awards: 
+medias: 
+    - {url: WayHome-2.png, thumbnail: WayHome-2.png, caption: "First level."}
+    - {url: WayHome-1.png, thumbnail: WayHome-1.png, caption: "Only une orb of life remaining."}
+    - {url: WayHome-3.png, thumbnail: WayHome-3.png, caption: "A orb just fall."}
+    - {url: WayHome-Manual1.png, thumbnail: WayHome-Manual1.png, caption: "Second player manual page 1 (french version)."}
+    - {url: WayHome-Manual2.png, thumbnail: WayHome-Manual2.png, caption: "Second player manual page 2."}
+
 ---
 A 2 player game where one player has a document with various information on witch species needs what. The player with the information is not allowed to see the screen. You must communicate well.
 
 As most jams, I codded the enemies behavior and spawing. Then I went straight to adding shaders everywhere. With a real artist, it was an exercice of communication of my shading idea and her artistic direction. It gave me the idea to create a list detailed of all the shaders I made. This resource is used to communicate ideas and exemples of what shaders can do and I could do with ease.
-
-## Medias
-<div class="row">
-{% include image-card.html FullImagePath='assets/img/gamejams/WayHome-2.png' ThumbnailPath='assets/img/gamejams/WayHome-2.png' Alt="First level." Caption="First level."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/WayHome-1.png' ThumbnailPath='assets/img/gamejams/WayHome-1.png' Alt="Only une orb of life remaining." Caption="Only une orb of life remaining."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/WayHome-3.png' ThumbnailPath='assets/img/gamejams/WayHome-3.png' Alt="A orb just fall." Caption="A orb just fall."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/WayHome-Manual1.png' ThumbnailPath='assets/img/gamejams/WayHome-Manual1.png' Alt="Second player manual page 1 (french version)." Caption="Second player manual page 1 (french version)."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/WayHome-Manual2.png' ThumbnailPath='assets/img/gamejams/WayHome-Manual2.png' Alt="Second player manual page 2." Caption="Second player manual page 2."%}
-</div>
