--- a/_gamejams/2018-05-01-bioMech.md
+++ b/_gamejams/2018-05-01-bioMech.md
@@ -14,14 +14,12 @@ myContribution:
 team: 
 visibily: archive
 awards: ["Jury's Choice"]
+medias: 
+    - {url: bioMech-1.png, thumbnail: bioMech-1.png, caption: "Title Screen."}
+    - {url: bioMech-2.png, thumbnail: bioMech-2.png, caption: "The player (in the blue bubble) is still alive!"}
+    - {url: bioMech-3.png, thumbnail: bioMech-3.png, caption: "A little bit of chaos."}
+
 ---
 Survive waves of enemis with your friends. You control flying entities that have different weapons. Don't let enemies get to the heart.
 
 This was a fun jam because I went a little further with all the effects(screen shake, flash, transition). Also, most of the shaders was a new version of old ones, getting my skill a little bit higher each time.
-
-## Medias
-<div class="row">
-{% include image-card.html FullImagePath='assets/img/gamejams/bioMech-1.png' ThumbnailPath='assets/img/gamejams/bioMech-1.png' Alt="Title Screen." Caption="Title Screen."%}
-{% include image-card.html FullImagePath='assets/img/gamejams/bioMech-2.png' ThumbnailPath='assets/img/gamejams/bioMech-2.png' Alt="The player (in the blue bubble) is still alive!" Caption="The player (in the blue bubble) is still alive!"%}
-{% include image-card.html FullImagePath='assets/img/gamejams/bioMech-3.png' ThumbnailPath='assets/img/gamejams/bioMech-3.png' Alt="A little bit of chaos." Caption="A little bit of chaos."%}
-</div>
