--- a/_gamejams/2021-08-14-Poutine64.md
+++ b/_gamejams/2021-08-14-Poutine64.md
@@ -14,12 +14,10 @@ myContribution:
 team: 
 visibily: main
 awards: 
+medias: 
+    - {url: Poutine64-Thumbnail.png, thumbnail: Poutine64-Thumbnail.png, caption: ""}
+
 ---
 Keep your clients happy by serving them poutine with precision. It's a fast past game where you fill a bowl with the right ratio of ingredients.
 
 As Godot is getting bigger and bigger, and I was intrigued and wanted to try it out. I followed some tutorial some week before to be ready. I like the lightness and some of the ways stuff are set-up (everything is a node under nodes). There is still some features that I missing in my sens but I'm still curious and will be checking it out once in a while.
-
-## Medias
-<div class="row">
-{% include image-card.html FullImagePath='assets/img/gamejams/Poutine64-Thumbnail.png' ThumbnailPath='assets/img/gamejams/Poutine64-Thumbnail.png' Alt="" Caption=""%}
-</div>
