- Changed cards style - Added some content

--- a/_projects/2020-12-25-AOC2020.md
+++ b/_projects/2020-12-25-AOC2020.md
@@ -2,14 +2,23 @@
 layout: project-post
 title: Advent Of Code 2020
 shortdescription: Description
-thumbnail-img: DuckysDayDream-thumbnail.png
+thumbnail-img: aoc2020-thumbnail.png
 tags: {{tags}}
-date: 2021-12-25
+date: 2020-12-25
 tools: [C#]
 ---
 
-Words
+## Day3
+{% include image-card.html FullImagePath='assets/img/projects/aoc2020-day3.gif' ThumbnailPath='assets/img/projects/aoc2020-day3.gif' Alt='' Caption='' %}
 
-***
+## Day5
+{% include image-card.html FullImagePath='assets/img/projects/aoc2020-day5.gif' ThumbnailPath='assets/img/projects/aoc2020-day5.gif' Alt='' Caption='' %}
 
-Words
+## Day11
+{% include image-card.html FullImagePath='assets/img/projects/aoc2020-day11-part2.gif' ThumbnailPath='assets/img/projects/aoc2020-day11-part2.gif' Alt='' Caption='' %}
+
+## Day14
+{% include image-card.html FullImagePath='assets/img/projects/aoc2020-day14-part2.gif' ThumbnailPath='assets/img/projects/aoc2020-day14-part2.gif' Alt='' Caption='' %}
+
+## Day24
+{% include image-card.html FullImagePath='assets/img/projects/aoc2020-day24-part2.gif' ThumbnailPath='assets/img/projects/aoc2020-day24-part2.gif' Alt='' Caption='' %}
