--- a/_projects/2021-12-25-AOC2021.md
+++ b/_projects/2021-12-25-AOC2021.md
@@ -2,7 +2,7 @@
 layout: project-post
 title: Advent Of Code 2021
 shortdescription: Description
-thumbnail-img: DuckysDayDream-thumbnail.png
+thumbnail-img: aoc2021-thumbnail.png
 tags: {{tags}}
 date: 2021-12-25
 tools: [C#]
