- More game jam - More text - MORE

--- a/_gamejams/2018-01-01-WayHome.md
+++ b/_gamejams/2018-01-01-WayHome.md
@@ -2,14 +2,15 @@
 layout: gamejam-post
 title: Wayhome
 salePitch: Vous êtes le WayHome, boussole cosmique et gardien de l'arbre de la connaissance. Work together to help travelers while protecting the fruit of knowledge.
-shortdescription: A game where I made shaders and enemis behaviors.
+shortdescription: A game where I made shaders and enemies behaviors.
 thumbnail-img: assets/img/gamejams/WayHome-Thumbnail.png
-tags: {{tags}}
+tags: ["Global_Game_Jam", "Team"]
 date: 2018-01-01
 duration: 48 hours
 event: Global game Jam 2018 (mtl game jam)
 theme: Transmission
 tools: ["Unity"]
+roles: ["Code", "GameDesign", "Shader"]
 myContribution: 
 team: 
 visibily: archive
@@ -20,8 +21,10 @@ medias:
     - {url: WayHome-3.png, thumbnail: WayHome-3.png, caption: "A orb just fall."}
     - {url: WayHome-Manual1.png, thumbnail: WayHome-Manual1.png, caption: "Second player manual page 1 (french version)."}
     - {url: WayHome-Manual2.png, thumbnail: WayHome-Manual2.png, caption: "Second player manual page 2."}
+links: 
+    - {name: Global Game Jam Page, url: https://globalgamejam.org/2018/games/wayhome}
 
 ---
-A 2 player game where one player has a document with various information on witch species needs what. The player with the information is not allowed to see the screen. You must communicate well.
+A 2 player game where one player has a document with various information on which species needs what. The player with the information is not allowed to see the screen. You must communicate well.
 
-As most jams, I codded the enemies behavior and spawing. Then I went straight to adding shaders everywhere. With a real artist, it was an exercice of communication of my shading idea and her artistic direction. It gave me the idea to create a list detailed of all the shaders I made. This resource is used to communicate ideas and exemples of what shaders can do and I could do with ease.
+As most jams, I coded the enemies behavior and spawning. Then I went straight to adding shaders everywhere. With a real artist, it was an exercise of communication of my shading idea and her artistic direction. It gave me the idea to create a list detailed of all the shaders I made. This resource is used to communicate ideas and examples of what shaders can do and I could do with ease.
