--- a/_gamejams/2018-05-01-bioMech.md
+++ b/_gamejams/2018-05-01-bioMech.md
@@ -4,12 +4,13 @@ title: bio-Mech Love War
 salePitch: Defend the Heart of your home from the unlikely alliance of mechs and bios!
 shortdescription: In this game, I made screen effects and shaders.
 thumbnail-img: assets/img/gamejams/bioMech-1.png
-tags: {{tags}}
+tags: ["Other_Game_Jams", "Team"]
 date: 2018-05-01
 duration: 48 hours
 event: Concordia Make Games 2018
 theme: Unlikely Friends
 tools: ["Unity"]
+roles: ["Code", "GameDesign", "Shader"]
 myContribution: 
 team: 
 visibily: archive
@@ -18,8 +19,10 @@ medias:
     - {url: bioMech-1.png, thumbnail: bioMech-1.png, caption: "Title Screen."}
     - {url: bioMech-2.png, thumbnail: bioMech-2.png, caption: "The player (in the blue bubble) is still alive!"}
     - {url: bioMech-3.png, thumbnail: bioMech-3.png, caption: "A little bit of chaos."}
+links: 
+    - {name: Itch.io Page, url: https://magicolo.itch.io/bio-mech-love-war}
 
 ---
-Survive waves of enemis with your friends. You control flying entities that have different weapons. Don't let enemies get to the heart.
+Survive waves of enemies with your friends. You control flying entities that have different weapons. Don't let enemies get to the heart.
 
-This was a fun jam because I went a little further with all the effects(screen shake, flash, transition). Also, most of the shaders was a new version of old ones, getting my skill a little bit higher each time.
+This was a fun jam because I went a little further with all the effects(screen shake, flash, transition). Also, most of the shaders were a new version of old ones, getting my skill a little bit higher each time.
