--- a/_gamejams/2021-08-01-Gmtk2021.md
+++ b/_gamejams/2021-08-01-Gmtk2021.md
@@ -4,20 +4,23 @@ title: Red thread of Fate
 salePitch: A relaxing city builder where you explore different building styles while following funny and whimsical stories.
 shortdescription: A game jam where I help some first to integrate le art and level design in unity.
 thumbnail-img: assets/img/gamejams/RedThreadOfFate-1.png
-tags: {{tags}}
+tags: ["Team", "GTMK"]
 date: 2021-08-01
 duration: 8 months
 event: GTMK 2021
 theme: Joined together
 tools: ["Unity", "PyxelEdit"]
+roles: ["Art", "Code", "GameDesign", "Writing", "UI"]
 myContribution: 
 team: 
 visibily: archives
 awards: 
 medias: 
-    - {url: RedThreadOfFate-1.png, thumbnail: RedThreadOfFate-1.png, caption: ""}
+    - {url: RedThreadOfFate-1.png, thumbnail: RedThreadOfFate-1.png, caption: "The look of the game."}
+links: 
+    - {name: Itch.io Page, url: https://corbeau01.itch.io/red-thread-of-fate}
 
 ---
-A kid, helped by a spirit, tries to leave the cave he got into by doing some plateformer puzzles.
+A kid, helped by a spirit, tries to leave the cave he got into by doing some platformer puzzles.
 
 The team had 2 artists that never used unity, so I was there to make their art fit into unity, add the colliders and all the other grunt work.
