--- a/_gamejams/2021-08-14-Poutine64.md
+++ b/_gamejams/2021-08-14-Poutine64.md
@@ -2,22 +2,25 @@
 layout: gamejam-post
 title: Poutine64
 salePitch: Prepare and serve poutines to clients.
-shortdescription: I used this game jam as a way to experiement with the Godot game engine.
+shortdescription: I used this game jam as a way to experiment with the Godot game engine.
 thumbnail-img: assets/img/gamejams/Poutine64-Thumbnail.png
-tags: {{tags}}
+tags: ["Other_Game_Jams", "Solo"]
 date: 2021-08-14
 duration: 2 weeks
 event: LOWREZJAM 2021
 theme: Resolution of 64x64 pixels or less
 tools: ["Godot", "PyxelEdit"]
+roles: ["Art", "Code", "GameDesign", "UI"]
 myContribution: 
 team: 
 visibily: main
 awards: 
 medias: 
-    - {url: Poutine64-Thumbnail.png, thumbnail: Poutine64-Thumbnail.png, caption: ""}
+    - {url: Poutine64-Thumbnail.png, thumbnail: Poutine64-Thumbnail.png, caption: "Title Screen"}
+links: 
+    - {name: Itch.io Page, url: https://dracir.itch.io/poutine64}
 
 ---
-Keep your clients happy by serving them poutine with precision. It's a fast past game where you fill a bowl with the right ratio of ingredients.
+Keep your clients happy by serving them poutine with precision. It's a fast-paced game where you fill a bowl with the right ratio of ingredients.
 
-As Godot is getting bigger and bigger, and I was intrigued and wanted to try it out. I followed some tutorial some week before to be ready. I like the lightness and some of the ways stuff are set-up (everything is a node under nodes). There is still some features that I missing in my sens but I'm still curious and will be checking it out once in a while.
+As Godot is getting bigger and bigger, I was intrigued and wanted to try it out. I followed a few tutorials a week before to be ready. I like the lightness and some of the ways stuff is set-up (everything is a node under nodes). There are still some features that I am missing in my senses but I'm still curious and will be checking it out once in a while.
