--- a/_posts/2022-02-11-init.md
+++ b/_posts/2022-02-11-init.md
@@ -5,7 +5,7 @@ subtitle: My research for doing this website
 cover-img: 
 thumbnail-img: /assets/img/thumb.png
 share-img: /assets/img/path.jpg
-tags: []
+tags: ["Unity"]
 ---
 
 I'm going to tell you the process and technologie I checked for making this website.
