--- a/_gamejams/2017-04-01-Orbis.md
+++ b/_gamejams/2017-04-01-Orbis.md
@@ -2,14 +2,15 @@
 layout: gamejam-post
 title: Orbis
 salePitch: Alter a groundhog day-like universe to save yourself from an alien-invading-timeline-collapsing-paradox by controlling the very essence of matter itself.
-shortdescription: Is there a pixel on that game that is not changed by a custom shader? I made sur there was none!
+shortdescription: Is there a pixel on that game that is not changed by a custom shader? I made sure there was none!
 thumbnail-img: assets/img/gamejams/OrbisThumbnail.jpg
-tags: {{tags}}
+tags: ["Ludum_Dare", "Team"]
 date: 2017-04-01
 duration: 48 hours
 event: Ludum Dare 38
 theme: A Small World
 tools: ["Unity"]
+roles: ["Code", "GameDesign", "Shader"]
 myContribution: 
 team: 
 visibily: main
@@ -19,8 +20,10 @@ medias:
     - {url: Orbis-2.jpg, thumbnail: Orbis-2.jpg, caption: "The effect of a volcano."}
     - {url: Orbis-3.jpg, thumbnail: Orbis-3.jpg, caption: "The ice asteroid is there to bring water!"}
     - {url: Orbis-4.gif, thumbnail: Orbis-4.gif, caption: "Heat shader in action."}
+links: 
+    - {name: Game Jolt Page, url: https://gamejolt.com/games/orbis/252050}
 
 ---
 A game where you must do the right action at the right time to discover new powers. At the end of times, you start over with all your powers. Try to bring life to this rock!
 
-Again a jam where I played with shaders. When the planet gets past a certain heat threshold, a heat distortion shader start to effect. A shader was also used to show/hide decal of lava or vegetation.
+Again a jam where I played with shaders. When the planet gets past a certain heat threshold, a heat distortion shader starts to effect. A shader was also used to show/hide decal of lava or vegetation.
