Content update and evil tracking

--- a/_projects/2020-12-25-AOC2020.md
+++ b/_projects/2020-12-25-AOC2020.md
@@ -1,24 +1,31 @@
 ---
 layout: project-post
 title: Advent Of Code 2020
-shortdescription: Description
+shortdescription: The year I made console renderings.
 thumbnail-img: aoc2020-thumbnail.png
 tags: {{tags}}
 date: 2020-12-25
 tools: [C#]
 ---
+My objectif of that year was to make rendering when I had something fun to create. The rendering speed is pretty slow because of console limits but the next year, I optimized it a bit.
 
-## Day3
+## Day3: Toboggan Trajectory
+Going down hill with trees ( green # ), which of the 5 angles makes you ( yellow symbol) hit ( red X ) the least amount of trees.
+
 {% include image-card.html FullImagePath='assets/img/projects/aoc2020-day3.gif' ThumbnailPath='assets/img/projects/aoc2020-day3.gif' Alt='' Caption='' %}
 
 ## Day5
+Find your seat by scanning ALL tickets, they are kinda encoded in binary. You know that you are not the last nor the first of a row ( red X ).
 {% include image-card.html FullImagePath='assets/img/projects/aoc2020-day5.gif' ThumbnailPath='assets/img/projects/aoc2020-day5.gif' Alt='' Caption='' %}
 
 ## Day11
+A version of the game of life. There are a lot of steps to get to the end, which is super long to render.
 {% include image-card.html FullImagePath='assets/img/projects/aoc2020-day11-part2.gif' ThumbnailPath='assets/img/projects/aoc2020-day11-part2.gif' Alt='' Caption='' %}
 
 ## Day14
+Mathematics with bit masks.
 {% include image-card.html FullImagePath='assets/img/projects/aoc2020-day14-part2.gif' ThumbnailPath='assets/img/projects/aoc2020-day14-part2.gif' Alt='' Caption='' %}
 
 ## Day24
+A member of the renovation crew gives you a list of the tiles that need to be flipped over (your puzzle input).
 {% include image-card.html FullImagePath='assets/img/projects/aoc2020-day24-part2.gif' ThumbnailPath='assets/img/projects/aoc2020-day24-part2.gif' Alt='' Caption='' %}
