--- a/_projects/2021-12-25-AOC2021.md
+++ b/_projects/2021-12-25-AOC2021.md
@@ -8,8 +8,17 @@ date: 2021-12-25
 tools: [C#]
 ---
 
-Words
+## Day5
+{% include image-card.html FullImagePath='assets/img/projects/aoc2021-day5-part2.m4v' ThumbnailPath='assets/img/projects/aoc2021-day5-part2.gif' Alt='' Caption='' %}
 
-***
+## Day8
+<div class="row">
+{% include image-card.html FullImagePath='assets/img/projects/aoc2021-day8-part2-1.webm' ThumbnailPath='assets/img/projects/aoc2021-day8-part2-1.gif' Alt='' Caption='' %}
+{% include image-card.html FullImagePath='assets/img/projects/aoc2021-day8-part2-2.webm' ThumbnailPath='assets/img/projects/aoc2021-day8-part2-2.gif' Alt='' Caption='' %}
+</div>
 
-Words
+## Day9
+{% include image-card.html FullImagePath='assets/img/projects/aoc2021-day9-part2.webm' ThumbnailPath='assets/img/projects/aoc2021-day9-part2-thumbnail.jpg' Alt='' Caption='' %}
+
+## Day13
+{% include image-card.html FullImagePath='assets/img/projects/aoc2021-day13-part2.webm' ThumbnailPath='assets/img/projects/aoc2021-day13-part2.gif' Alt='' Caption='' %}
