Made an awesome tag pages.

--- a/_gamejams/2018-01-01-WayHome.md
+++ b/_gamejams/2018-01-01-WayHome.md
@@ -4,10 +4,11 @@ title: Wayhome
 salePitch: Vous êtes le WayHome, boussole cosmique et gardien de l'arbre de la connaissance. Work together to help travelers while protecting the fruit of knowledge.
 shortdescription: A game where I made shaders and enemies behaviors.
 thumbnail-img: assets/img/gamejams/WayHome-Thumbnail.png
-tags: ["Global_Game_Jam", "Team"]
 date: 2018-01-01
 duration: 48 hours
 event: Global game Jam 2018 (mtl game jam)
+eventGroup: ["Global Game Jam"]
+tags: {{tags}}
 theme: Transmission
 tools: ["Unity"]
 roles: ["Code", "GameDesign", "Shader"]
