--- a/_posts/2022-03-01-Boby.md
+++ b/_posts/2022-03-01-Boby.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Init Website
+title: zboby
 subtitle: My research for doing this website
 cover-img: 
 thumbnail-img: /assets/img/thumb.png
