--- a/_projects/2020-12-25-AOC2020.md
+++ b/_projects/2020-12-25-AOC2020.md
@@ -3,8 +3,10 @@ layout: project-post
 title: Advent Of Code 2020
 shortdescription: The year I made console renderings.
 thumbnail-img: aoc2020-thumbnail.png
-tags: {{tags}}
+tags: 
 date: 2020-12-25
+eventGroup: ["Advent of Code"]
+
 ---
 My objectif of that year was to make rendering when I had something fun to create. The rendering speed is pretty slow because of console limits but the next year, I optimized it a bit.
 
