--- a/_projects/2021-08-07-Duckys.md
+++ b/_projects/2021-08-07-Duckys.md
@@ -2,7 +2,7 @@
 layout: project-post
 title: Ducky's Day Dream
 thumbnail-img: DuckysDayDream-thumbnail.png
-tags: [test]
+tags: []
 comments: true
 date: 2021-08-07
 ---
