--- a/_projects/2021-12-25-AOC2021.md
+++ b/_projects/2021-12-25-AOC2021.md
@@ -3,9 +3,10 @@ layout: project-post
 title: Advent Of Code 2021
 shortdescription: Description
 thumbnail-img: aoc2021-thumbnail.png
-tags: {{tags}}
+tags: 
 date: 2021-12-25
 tools: [C#]
+eventGroup: ["Advent of Code"]
 ---
 
 ## Day5
