--- a/_gamejams/2018-05-01-bioMech.md
+++ b/_gamejams/2018-05-01-bioMech.md
@@ -4,10 +4,11 @@ title: bio-Mech Love War
 salePitch: Defend the Heart of your home from the unlikely alliance of mechs and bios!
 shortdescription: In this game, I made screen effects and shaders.
 thumbnail-img: assets/img/gamejams/bioMech-1.png
-tags: ["Other_Game_Jams", "Team"]
 date: 2018-05-01
 duration: 48 hours
 event: Concordia Make Games 2018
+eventGroup: ["Other Game Jams"]
+tags: {{tags}}
 theme: Unlikely Friends
 tools: ["Unity"]
 roles: ["Code", "GameDesign", "Shader"]
