--- a/_gamejams/2021-08-01-Gmtk2021.md
+++ b/_gamejams/2021-08-01-Gmtk2021.md
@@ -4,10 +4,11 @@ title: Red thread of Fate
 salePitch: A relaxing city builder where you explore different building styles while following funny and whimsical stories.
 shortdescription: A game jam where I help some first to integrate le art and level design in unity.
 thumbnail-img: assets/img/gamejams/RedThreadOfFate-1.png
-tags: ["Team", "GTMK"]
 date: 2021-08-01
 duration: 8 months
 event: GTMK 2021
+eventGroup: ["GMTK"]
+tags: {{tags}}
 theme: Joined together
 tools: ["Unity", "PyxelEdit"]
 roles: ["Art", "Code", "GameDesign", "Writing", "UI"]
