--- a/_gamejams/2021-08-14-Poutine64.md
+++ b/_gamejams/2021-08-14-Poutine64.md
@@ -4,10 +4,11 @@ title: Poutine64
 salePitch: Prepare and serve poutines to clients.
 shortdescription: I used this game jam as a way to experiment with the Godot game engine.
 thumbnail-img: assets/img/gamejams/Poutine64-Thumbnail.png
-tags: ["Other_Game_Jams", "Solo"]
 date: 2021-08-14
 duration: 2 weeks
 event: LOWREZJAM 2021
+eventGroup: ["Other Game Jams"]
+tags: {{tags}}
 theme: Resolution of 64x64 pixels or less
 tools: ["Godot", "PyxelEdit"]
 roles: ["Art", "Code", "GameDesign", "UI"]
